Make ford snowy forest be worst(best(flat, shallow_water), frozen, forest)
This makes "ford" be a help section heading, with no terrains in that section.

--- a/data/test/scenarios/wml_tests/UnitsWML/test_movetype.cfg
+++ b/data/test/scenarios/wml_tests/UnitsWML/test_movetype.cfg
@@ -16,16 +16,19 @@
 #     ford snowy forest (Frozen, Forest, Flat, Shallow Water)
 #     Keep
 #
-# Note: in 1.14 (and 1.15 at the time of writing), ford snowy forest's movement is
-# the worst of all four types, not the worst of (Frozen, Forest, Ford).
+# Since 1.19.?, the movement costs for those terrains are:
 #
-# 1, 1, 2, 2, 3, 2, 2, 3, 1, 1, 1, 3, 1 MP for an Elvish Archer
-# 1, 2, 2, 1, 2, 2, 2, 2, 1, 1, 1, 3, 1 MP for an Orcish Grunt
+# 1, 1, 2, 2, 3, 2, 2, 3, 1, 1, 1, 2, 1 MP for an Elvish Archer
+# 1, 2, 2, 1, 2, 2, 2, 2, 1, 1, 1, 2, 1 MP for an Orcish Grunt
+#
+# In 1.18 and before, ford snowy forest needed 3 MP for both Alice and Bob.
+# This was calculated as the worst of all four base types, instead of treating
+# Ford as (best-of Flat and Shallow Water).
 
 # Bob is always an orc, his movement is checked in every test run to check that
 # any effect in ALICE_MODIFICATION hasn't affected his movement costs.
 #define ORC_COSTS
-    1,2,2,1,2,2,2,2,1,1,1,3,1
+    1,2,2,1,2,2,2,2,1,1,1,2,1
 #enddef
 
 #define MOVETYPE_MOVE_SCEN ID ALICE_TYPE ALICE_MOVE_COSTS BOB_MOVE_COSTS ALICE_MODIFICATION
@@ -339,7 +342,7 @@
 # The Elvish Archer (alice) has the expected movement costs per terrain based on its default movetype.
 # The Orcish Grunt (bob) has the expected movement costs per terrain based on its default movetype.
 #####
-{MOVETYPE_MOVE_SCEN test_elf_movement (Elvish Archer) (1,1,2,2,3,2,2,3,1,1,1,3,1) {ORC_COSTS} ()}
+{MOVETYPE_MOVE_SCEN test_elf_movement (Elvish Archer) (1,1,2,2,3,2,2,3,1,1,1,2,1) {ORC_COSTS} ()}
 #####
 # API(s) being tested: [movetype]
 ##
@@ -355,7 +358,7 @@
 # The Elvish Archer (alice) has the expected movement costs per terrain based on its modified movetype with the movement cost of caves set to 1.
 # The Orcish Grunt (bob) has the expected movement costs per terrain based on its default movetype.
 #####
-{MOVETYPE_MOVE_SCEN test_elf_fast_cave_movement (Elvish Archer) (1,1,2,2,2,2,2,2,1,1,1,3,1) {ORC_COSTS} {SET_MOVE_COSTS cave=1}}
+{MOVETYPE_MOVE_SCEN test_elf_fast_cave_movement (Elvish Archer) (1,1,2,2,2,2,2,2,1,1,1,2,1) {ORC_COSTS} {SET_MOVE_COSTS cave=1}}
 #####
 # API(s) being tested: [movetype]
 ##
@@ -363,7 +366,7 @@
 # The Elvish Archer (alice) has the expected movement costs per terrain based on its modified movetype with the movement cost of hills set to 1.
 # The Orcish Grunt (bob) has the expected movement costs per terrain based on its default movetype.
 #####
-{MOVETYPE_MOVE_SCEN test_elf_fast_hills_movement (Elvish Archer) (1,1,1,1,3,2,2,3,1,1,1,3,1) {ORC_COSTS} {SET_MOVE_COSTS hills=1}}
+{MOVETYPE_MOVE_SCEN test_elf_fast_hills_movement (Elvish Archer) (1,1,1,1,3,2,2,3,1,1,1,2,1) {ORC_COSTS} {SET_MOVE_COSTS hills=1}}
 #####
 # API(s) being tested: [movetype]
 ##
@@ -371,7 +374,7 @@
 # The Elvish Archer (alice) has the expected movement costs per terrain based on its modified movetype with the movement cost of caves and hills set to 1.
 # The Orcish Grunt (bob) has the expected movement costs per terrain based on its default movetype.
 #####
-{MOVETYPE_MOVE_SCEN test_elf_fast_cave_and_hills_movement (Elvish Archer) (1,1,1,1,1,2,2,2,1,1,1,3,1) {ORC_COSTS} ({SET_MOVE_COSTS cave=1}{SET_MOVE_COSTS hills=1})}
+{MOVETYPE_MOVE_SCEN test_elf_fast_cave_and_hills_movement (Elvish Archer) (1,1,1,1,1,2,2,2,1,1,1,2,1) {ORC_COSTS} ({SET_MOVE_COSTS cave=1}{SET_MOVE_COSTS hills=1})}
 #####
 # API(s) being tested: [movetype]
 ##
@@ -379,7 +382,7 @@
 # The Orcish Grunt (alice) has the expected movement costs per terrain based on its modified movetype with the movement cost of caves set to 1.
 # The Orcish Grunt (bob) has the expected movement costs per terrain based on its default movetype.
 #####
-{MOVETYPE_MOVE_SCEN test_orc_fast_cave_movement (Orcish Grunt) (1,2,2,1,1,2,2,2,1,1,1,3,1) {ORC_COSTS} {SET_MOVE_COSTS cave=1}}
+{MOVETYPE_MOVE_SCEN test_orc_fast_cave_movement (Orcish Grunt) (1,2,2,1,1,2,2,2,1,1,1,2,1) {ORC_COSTS} {SET_MOVE_COSTS cave=1}}
 #####
 # API(s) being tested: [movetype]
 ##
@@ -387,7 +390,7 @@
 # The Orcish Grunt (alice) has the expected movement costs per terrain based on its modified movetype with the movement cost of forests set to 1.
 # The Orcish Grunt (bob) has the expected movement costs per terrain based on its default movetype.
 #####
-{MOVETYPE_MOVE_SCEN test_orc_fast_forest_movement (Orcish Grunt) (1,1,1,1,2,2,2,2,1,1,1,3,1) {ORC_COSTS} {SET_MOVE_COSTS forest=1}}
+{MOVETYPE_MOVE_SCEN test_orc_fast_forest_movement (Orcish Grunt) (1,1,1,1,2,2,2,2,1,1,1,2,1) {ORC_COSTS} {SET_MOVE_COSTS forest=1}}
 #####
 # API(s) being tested: [movetype]
 ##
@@ -395,7 +398,7 @@
 # The Elvish Archer (alice) has the expected movement costs per terrain based on its modified movetype with the movement cost of caves set to 4.
 # The Orcish Grunt (bob) has the expected movement costs per terrain based on its default movetype.
 #####
-{MOVETYPE_MOVE_SCEN test_elf_slow_cave_movement (Elvish Archer) (1,1,2,2,4,2,2,4,1,1,1,3,1) {ORC_COSTS} {SET_MOVE_COSTS cave=4}}
+{MOVETYPE_MOVE_SCEN test_elf_slow_cave_movement (Elvish Archer) (1,1,2,2,4,2,2,4,1,1,1,2,1) {ORC_COSTS} {SET_MOVE_COSTS cave=4}}
 
 #####
 # API(s) being tested: [movetype]
@@ -405,7 +408,7 @@
 # The Orcish Grunt (bob) has the expected movement costs per terrain based on its default movetype.
 # Changing the vision costs doesn't affect the movement costs.
 #####
-{MOVETYPE_MOVE_SCEN test_elf_longsighted_movement (Elvish Archer) (1,1,2,2,3,2,2,3,1,1,1,3,1) {ORC_COSTS} {SET_VISION_COSTS cave=1}}
+{MOVETYPE_MOVE_SCEN test_elf_longsighted_movement (Elvish Archer) (1,1,2,2,3,2,2,3,1,1,1,2,1) {ORC_COSTS} {SET_VISION_COSTS cave=1}}
 #####
 # API(s) being tested: [movetype]
 ##
@@ -423,7 +426,7 @@
 # The Orcish Grunt (bob) has the expected movement costs per terrain based on its default movetype.
 # Changing the vision costs doesn't affect the movement costs.
 #####
-{MOVETYPE_MOVE_SCEN test_elf_longsighted_fast_cave_movement (Elvish Archer) (1,1,2,2,2,2,2,2,1,1,1,3,1) {ORC_COSTS} (
+{MOVETYPE_MOVE_SCEN test_elf_longsighted_fast_cave_movement (Elvish Archer) (1,1,2,2,2,2,2,2,1,1,1,2,1) {ORC_COSTS} (
     {SET_VISION_COSTS hills=1}
     {SET_MOVE_COSTS cave=1}
 )}
@@ -436,7 +439,7 @@
 # Changing the vision costs doesn't affect the movement costs.
 # Changing the sequence of applying changes to movement cost and vision cost does not affect the outcome.
 #####
-{MOVETYPE_MOVE_SCEN test_elf_fast_cave_longsighted_movement (Elvish Archer) (1,1,2,2,2,2,2,2,1,1,1,3,1) {ORC_COSTS} (
+{MOVETYPE_MOVE_SCEN test_elf_fast_cave_longsighted_movement (Elvish Archer) (1,1,2,2,2,2,2,2,1,1,1,2,1) {ORC_COSTS} (
     {SET_MOVE_COSTS cave=1}
     {SET_VISION_COSTS hills=1}
 )}
@@ -447,21 +450,21 @@
 # Expected end state:
 # The Elvish Archer (alice) has the expected vision costs per terrain based on its default movetype.
 #####
-{MOVETYPE_VISION_SCEN test_elf_vision (Elvish Archer) (1,1,2,2,3,2,2,3,1,1,1,3,1) ()}
+{MOVETYPE_VISION_SCEN test_elf_vision (Elvish Archer) (1,1,2,2,3,2,2,3,1,1,1,2,1) ()}
 #####
 # API(s) being tested: [movetype]
 ##
 # Expected end state:
 # The Elvish Archer (alice) has the expected vision costs per terrain based on its modified movetype with the movement cost of cave set to 1.
 #####
-{MOVETYPE_VISION_SCEN test_elf_fast_cave_vision (Elvish Archer) (1,1,2,2,2,2,2,2,1,1,1,3,1) {SET_MOVE_COSTS cave=1}}
+{MOVETYPE_VISION_SCEN test_elf_fast_cave_vision (Elvish Archer) (1,1,2,2,2,2,2,2,1,1,1,2,1) {SET_MOVE_COSTS cave=1}}
 #####
 # API(s) being tested: [movetype]
 ##
 # Expected end state:
 # The Elvish Archer (alice) has the expected vision costs per terrain based on its modified movetype with the movement cost of hills set to 1.
 #####
-{MOVETYPE_VISION_SCEN test_elf_fast_hills_vision (Elvish Archer) (1,1,1,1,3,2,2,3,1,1,1,3,1) {SET_MOVE_COSTS hills=1}}
+{MOVETYPE_VISION_SCEN test_elf_fast_hills_vision (Elvish Archer) (1,1,1,1,3,2,2,3,1,1,1,2,1) {SET_MOVE_COSTS hills=1}}
 
 #####
 # API(s) being tested: [movetype]
@@ -469,14 +472,14 @@
 # Expected end state:
 # The Elvish Archer (alice) has the expected vision costs per terrain based on the vision cost alone of cave being set to 1.
 #####
-{MOVETYPE_VISION_SCEN test_elf_longsighted_cave_vision (Elvish Archer) (1,1,2,2,2,2,2,2,1,1,1,3,1) {SET_VISION_COSTS cave=1}}
+{MOVETYPE_VISION_SCEN test_elf_longsighted_cave_vision (Elvish Archer) (1,1,2,2,2,2,2,2,1,1,1,2,1) {SET_VISION_COSTS cave=1}}
 #####
 # API(s) being tested: [movetype]
 ##
 # Expected end state:
 # The Elvish Archer (alice) has the expected vision costs per terrain based on the vision cost alone of cave and hills being set to 1.
 #####
-{MOVETYPE_VISION_SCEN test_elf_longsighted_cave_and_hills_vision (Elvish Archer) (1,1,1,1,1,2,2,2,1,1,1,3,1) (
+{MOVETYPE_VISION_SCEN test_elf_longsighted_cave_and_hills_vision (Elvish Archer) (1,1,1,1,1,2,2,2,1,1,1,2,1) (
     {SET_VISION_COSTS cave=1}
     {SET_VISION_COSTS hills=1}
 )}
@@ -486,7 +489,7 @@
 # Expected end state:
 # The Elvish Archer (alice) has the expected vision costs per terrain based on its modified movetype with the movement cost of cave set to 4 while the vision cost of cave is set to 1.
 #####
-{MOVETYPE_VISION_SCEN test_elf_longsighted_cave_slow_cave_vision (Elvish Archer) (1,1,2,2,2,2,2,2,1,1,1,3,1) (
+{MOVETYPE_VISION_SCEN test_elf_longsighted_cave_slow_cave_vision (Elvish Archer) (1,1,2,2,2,2,2,2,1,1,1,2,1) (
     {SET_VISION_COSTS cave=1}
     {SET_MOVE_COSTS cave=4}
 )}
