UtBS S08 Clarify objectives when the messager isn't on the map

--- a/data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg
+++ b/data/campaigns/Under_the_Burning_Suns/scenarios/08_Out_of_the_Frying_Pan.cfg
@@ -479,6 +479,18 @@
                 [/show_if]
             [/note]
 
+            [note]
+                description= _  "The messenger is still preparing in the castle"
+                [show_if]
+                    {VARIABLE_CONDITIONAL messengers_incoming boolean_equals yes}
+                    [not]
+                        [have_unit]
+                            id=messenger
+                        [/have_unit]
+                    [/not]
+                [/show_if]
+            [/note]
+
             [gold_carryover]
                 bonus=yes
                 carryover_percentage=40
