Testing ids in the 4p cumulative leadership test

--- a/data/test/scenarios/test_teachers_and_specials.cfg
+++ b/data/test/scenarios/test_teachers_and_specials.cfg
@@ -1,19 +1,19 @@
 #textdomain wesnoth-test
 
-#define TEST_GIVE_LEADERSHIP ID AMOUNT CUMULATIVE
+#define TEST_GIVE_LEADERSHIP FILTER ID AMOUNT CUMULATIVE
     [object]
         [filter]
-            id={ID}
+            {FILTER}
         [/filter]
         [effect]
             apply_to=new_ability
             [abilities]
                 [leadership]
-                    id="leadership_from_{ID}"
+                    id="leadership_with_id_{ID}"
                     cumulative={CUMULATIVE}
                     value={AMOUNT}
 #ifndef SCHEMA_VALIDATION
-                        name="leadership_from_{ID}"
+                        name="leadership_with_id_{ID}"
 #endif
                     affect_self=yes
                     affect_allies=yes
@@ -44,9 +44,9 @@
     [event]
         name=start
 
-        {TEST_GIVE_LEADERSHIP bob 50 yes}
-        {TEST_GIVE_LEADERSHIP charlie 50 yes}
-        {TEST_GIVE_LEADERSHIP dave 50 no}
+        {TEST_GIVE_LEADERSHIP id=bob B 50 yes}
+        {TEST_GIVE_LEADERSHIP id=charlie C 50 yes}
+        {TEST_GIVE_LEADERSHIP id=dave D 50 no}
     [/event]
 )}
 
@@ -54,9 +54,9 @@
     [event]
         name=start
 
-        {TEST_GIVE_LEADERSHIP bob 50 yes}
-        {TEST_GIVE_LEADERSHIP charlie 50 no}
-        {TEST_GIVE_LEADERSHIP dave 50 yes}
+        {TEST_GIVE_LEADERSHIP id=bob B 50 yes}
+        {TEST_GIVE_LEADERSHIP id=charlie C 50 no}
+        {TEST_GIVE_LEADERSHIP id=dave D 50 yes}
     [/event]
 )}
 
@@ -64,9 +64,9 @@
     [event]
         name=start
 
-        {TEST_GIVE_LEADERSHIP bob 50 yes}
-        {TEST_GIVE_LEADERSHIP charlie 50 yes}
-        {TEST_GIVE_LEADERSHIP dave 50 yes}
+        {TEST_GIVE_LEADERSHIP id=bob B 50 yes}
+        {TEST_GIVE_LEADERSHIP id=charlie C 50 yes}
+        {TEST_GIVE_LEADERSHIP id=dave D 50 yes}
     [/event]
 )}
 
@@ -74,8 +74,18 @@
     [event]
         name=start
 
-        {TEST_GIVE_LEADERSHIP bob 50 yes}
-        {TEST_GIVE_LEADERSHIP charlie 50 no}
-        {TEST_GIVE_LEADERSHIP dave 50 no}
+        {TEST_GIVE_LEADERSHIP id=bob B 50 yes}
+        {TEST_GIVE_LEADERSHIP id=charlie C 50 no}
+        {TEST_GIVE_LEADERSHIP id=dave D 50 no}
+    [/event]
+)}
+
+{COMMON_KEEP_A_B_C_D_UNIT_TEST cumulative_leadership_same_id (
+    [event]
+        name=start
+
+        {TEST_GIVE_LEADERSHIP id=bob B 50 yes}
+        {TEST_GIVE_LEADERSHIP id=charlie B 50 yes}
+        {TEST_GIVE_LEADERSHIP id=dave B 50 yes}
     [/event]
 )}
