BROKEN TEST: add a test for cumulative_leadership
Broken because I tried to implement this as an Alice and Bob test, rather
than using the four-sided `COMMON_KEEP_A_B_C_D_UNIT_TEST`. It's not valid
to give a single unit multiple `[leadership]` abilities that use the same
`id`.

When using the LuaAPI as done here, only the first `[leadership]` is added.
When changing Newfrenchy's test in `test_add_or_sub_in_leadership.cfg`, which
is also an Alice and Bob test, to have multiple abilities with the same `id`s,
the result is also failure; the multiple abilities are shown in the `:inspect`
browser, but the combat results aren't the expected amount.

Going to ask in #6466 about the expected results.

--- a/data/test/scenarios/cumulative_leadership.cfg
+++ b/data/test/scenarios/cumulative_leadership.cfg
@@ -5,8 +5,8 @@
 ##
 # Actions:
 # Start with Alice and Bob on a common keep.
-# Give Alice several self-leadership abilities.
-# Simulate combat, check the Alice does the expected amount of damage.
+# Give Bob several self-leadership abilities.
+# Simulate combat, check that Bob does the expected amount of damage.
 ##
 # Expected end state:
 #####
@@ -20,11 +20,11 @@
                     local T = wml.tag
                     local effects = {
                         T.effect {
-                            apply_to = new_ability,
-                            T.abilities = {
-                                T.leadership = {
+                            apply_to = "new_ability",
+                            T.abilities {
+                                T.leadership {
                                     id = ability_id,
-                                    cumulative = cumulative,
+                                    cumulative = "yes",
                                     value = value,
                                     name = "leadership_with_id_" .. ability_id,
                                     affect_self = true
@@ -35,27 +35,70 @@
                     unit:add_modification("object", effects)
                 end
 
-                -- Assert that unit's attack, augmented by leadership skills, does expected_damage per strike.
+                -- Calculate the unit's damage per strike, including the effect of leadership skills.
 				-- This stat doesn't appear to be directly available in the LuaAPI, so the test simulates combat
-				-- with another unit (Bob needs to be passed as the target).
-                function check_damage(unit, target, expected_damage, log_message)
-                    unit_test.assert_greater_than(target.hp, 2 * expected_damage, "Test setup incorrect, this combat can do lethal damage")
+				-- with another unit (which needs to be passed as the target).
+				function effective_damage(unit, target)
+					local _, def_stats = wesnoth.simulate_combat(unit, target)
 
-					-- Assume they're both on castle tiles, so chance to be hit on one strike out of two is 2 * 40% * 60%.
-					local att_stats, def_stats = wesnoth.simulate_combat(unit, target)
-					local hp = target.hp - expected_damage
-					unit_test.assert_approx_equal(def_stats[hp], 2 * 0.4 * 0.6, 0.001, log_message .. " didn't match expectation for " .. expected_damage .. " damage")
-                end
+					local possible_hp = {}
+					for hp,chance in pairs(def_stats.hp_chance) do
+						if chance > 0.0001 then
+							table.insert(possible_hp, hp)
+						end
+					end
+
+					unit_test.assert_greater(#possible_hp, 1, "Combat appears to always leave the target at full health")
+					table.sort(possible_hp)
+					return possible_hp[#possible_hp] - possible_hp[#possible_hp - 1]
+				end
 
                 local alice = wesnoth.units.find({id="alice"})[1]
                 local bob = wesnoth.units.find({id="bob"})[1]
 
-                local clone_alice = alice:clone()
-				check_damage(clone_alice, bob, 9, "No leadership")
+                local clone_bob = bob:clone()
+				unit_test.assert_equal(effective_damage(clone_bob, alice), 9, "0% leadership")
 
-                local clone_alice = alice:clone()
-				add_self_leadership(clone_alice, "leadership", false, 0.12)
-				check_damage(clone_alice, bob, 10, "12% leadership")
+                local clone_bob = bob:clone()
+				add_self_leadership(clone_bob, "leadership", false, 12)
+				unit_test.assert_equal(effective_damage(clone_bob, alice), 10, "12% leadership")
+
+                local clone_bob = bob:clone()
+				add_self_leadership(clone_bob, "leadership", false, 24)
+				unit_test.assert_equal(effective_damage(clone_bob, alice), 11, "24% leadership")
+
+				-- Two abilities with the same ID, non-cumulative
+                local clone_bob = bob:clone()
+				add_self_leadership(clone_bob, "leadership", false, 12)
+				add_self_leadership(clone_bob, "leadership", false, 12)
+				unit_test.assert_equal(effective_damage(clone_bob, alice), 10, "12% + 12% but non-cumulative leadership")
+
+				-- Two abilities with the different IDs, non-cumulative
+                local clone_bob = bob:clone()
+				add_self_leadership(clone_bob, "respect", false, 12)
+				add_self_leadership(clone_bob, "inspire", false, 12)
+				unit_test.assert_equal(effective_damage(clone_bob, alice), 11, "12% respect + 12% inspire leadership")
+
+				-- TODO: the following three fail, because they only add the first of the two leadership abilities.
+
+				-- Two abilities with the same ID, one cumulative
+                local clone_bob = bob:clone()
+				add_self_leadership(clone_bob, "leadership", true, 12)
+				add_self_leadership(clone_bob, "leadership", false, 12)
+				unit_test.assert_equal(effective_damage(clone_bob, alice), 11, "12% + 12% first cumulative leadership")
+
+				-- Other one cumulative
+                local clone_bob = bob:clone()
+				add_self_leadership(clone_bob, "leadership", false, 12)
+				add_self_leadership(clone_bob, "leadership", true, 12)
+				unit_test.assert_equal(effective_damage(clone_bob, alice), 11, "12% + 12% second cumulative leadership")
+
+				-- Both cumulative
+                local clone_bob = bob:clone()
+				add_self_leadership(clone_bob, "leadership", true, 12)
+				add_self_leadership(clone_bob, "leadership", true, 12)
+				unit_test.assert_equal(effective_damage(clone_bob, alice), 11, "12% + 12% both cumulative leadership")
+
             >>
         [/lua]
 
