fix overwrite_specials and active_on context in filter shema validation

--- a/data/schema/filters/abilities.cfg
+++ b/data/schema/filters/abilities.cfg
@@ -4,9 +4,9 @@
 	max=0
 	{SIMPLE_KEY id string_list}
 	{SIMPLE_KEY tag_name string_list}
-	{SIMPLE_KEY overwrite_specials string_list}
+	{SIMPLE_KEY overwrite_specials ability_overwrite}
 	{SIMPLE_KEY apply_to string_list}
-	{SIMPLE_KEY active_on string_list}
+	{SIMPLE_KEY active_on ability_context}
 	{SIMPLE_KEY value s_int_range_list}
 	{SIMPLE_KEY add s_int_range_list}
 	{SIMPLE_KEY sub s_int_range_list}
