wmllint: Stop treating single-hex terrain masks as Wesnoth 1.2 map data
Also change the placement of the newlines in the output. The two changes
are done together so that the changes from running wmllint are together.

If there's only one line, put both double-quotes on the same line:

    mask = "Xv, Xv"

If there's more than one, put the leftmost hex of each row in the same column,
and have a separate line for the closing double-quote:

    mask = "
Xv, Xv
Xv, Xv
"

Prior to Wesnoth 1.3.1, the map data used a single letter per hex instead of
the current comma-separated format. The removed code seems to be for handling
those old maps, and so should only be in wmllint-1.4.

Using `[terrain_mask]mask=Xv` triggered a false identification of the mask as
the old map format, causing it to be converted to `mask=X,v` instead, thus
corrupting data/test/scenarios/behavioral_tests/test_victory_attacks.cfg.

--- a/data/campaigns/Liberty/scenarios/07_Glory.cfg
+++ b/data/campaigns/Liberty/scenarios/07_Glory.cfg
@@ -749,7 +749,8 @@ One score and eight years ago, in 70 YW, the King of Wesnoth and the Lord of Ele
                             [terrain_mask]
                                 x,y=15,9
                                 border=no
-                                mask="Re, Mm^Xm, Re, Ww, Rr, Ww^Bw|, Rr, Rr, Gs^Fds, Mm^Xm, Gs^Fds
+                                mask="
+Re, Mm^Xm, Re, Ww, Rr, Ww^Bw|, Rr, Rr, Gs^Fds, Mm^Xm, Gs^Fds
 Mm, Chr, Mm^Xm, Re, Uh, Uu, Uh, Uh, Mm^Xm, Uu, Mm^Xm
 Uu, Uu, Qxu, Uu, Re, Qxu, Re, Qxu, Chr, Rr, Chr
 Uu, Chr, Qxu, Qxu, Qxu, Qxu, Qxu, Qxu, Uu, Qxu, Re
