--- a/data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg
+++ b/data/campaigns/The_South_Guard/scenarios/06b_The_Long_March.cfg
@@ -299,7 +299,8 @@
             x=$ford_mask_x
             y=3
             border=no
-            mask="Ww^Ewl, Wwf, Ww^Ewl
+            mask="
+Ww^Ewl, Wwf, Ww^Ewl
 Ww, Wwf, Ww^Ewl
 Ww^Ewl, Wwf, Ww^Ewl
 Ww, Wwf, Ww
@@ -319,7 +320,8 @@ Ww^Ewl, Wwf, Ww^Ewl
         [terrain_mask]
             x=$ford_mask_x
             y=0
-            mask="_f, _f, Re, _f
+            mask="
+_f, _f, Re, _f
 _f, _f, Re, _f
 _f, _f, Re, _f
 _f, _f, Re, _f
