--- a/data/test/maps/pathfind_1.cfg
+++ b/data/test/maps/pathfind_1.cfg
@@ -1,7 +1,8 @@
 current_time=0
 description=""
 experience_modifier=70
-map_data="Rr, Gg, Gg, Hh, Hh, Hh^Fds, Hh^Fms, Rr, Rr, Wwf, Wwf, Ww, Wwf, Ww, Ww, Ww, Ww, Ww, Ww, Wwf, Gg, Gg, Gs^Fms, Gs^Fp, Hh^Fds, Hh^Fms, Mm, Hh^Fms, Gg^Fp, Gg, Rr, Rr, Hh^Fp, Hh, Wwf, Wwf, Ww, Wo, Wo, Wo, Ww, Wwf, Wwf, Gg, Hh, Mm, Hh, Gg, Gg
+map_data="
+Rr, Gg, Gg, Hh, Hh, Hh^Fds, Hh^Fms, Rr, Rr, Wwf, Wwf, Ww, Wwf, Ww, Ww, Ww, Ww, Ww, Ww, Wwf, Gg, Gg, Gs^Fms, Gs^Fp, Hh^Fds, Hh^Fms, Mm, Hh^Fms, Gg^Fp, Gg, Rr, Rr, Hh^Fp, Hh, Wwf, Wwf, Ww, Wo, Wo, Wo, Ww, Wwf, Wwf, Gg, Hh, Mm, Hh, Gg, Gg
 Hh, Rr, Rr, Gg, Gs^Fds, Mm, Mm, Mm, Gg^Fms, Rr, Rr, Wwf, Gg, Wwf, Wwf, Ww, Wwf, Ww, Wwf, Wwf, Gs^Fms, Gg^Fp, Hh, Mm, Hh, Gs^Fds, Gg, Gg, Rr, Rr, Gg, Hh, Gg, Mm, Wwf, Ww, Wo, Wo, Wo, Wo, Ww, Wwf, Gg, Gs^Fms, Gs, Hh^Fp, Gs, Gs^Fds, Gs^Fds
 Gg^Fet, Gg, Rr, Gg, Gg, Hh, Gs, Hh^Fp, Gg, Gg, Rr, Gg, Hh^Fms, Gg, Gg, Wwf, Mm, Wwf, Gg, Gg, Gg, Gg^Efm, Gg, Hh^Fms, Rr, Gg, Rr, Rr, Tb^Tf, Gs, Gs^Fms, Gg, Wwf, Wwf, Ww, Ww, Wo, Wo, Ww, Ww, Wwf, Wwf, Hh^Fms, Gg^Efm, Gg^Efm, Gs, Gg, Gg, Gg
 Mm, Gg^Fp, Hh^Fds, Rr, Rr, Gg, Gg, Gg, Gg, Gg, Rr, Gg^Fms, Hh, Gg^Efm, Gg, Tb^Tf, Gs^Fp, Hh, Hh, Gg^Fet, Gg, Tb^Tf, Rr, Rr, Gg, Rr, Gg^Fet, Mm, Hh, Hh, Tb^Tf, Wwf, Ww, Ww, Wo, Wo, Wo, Ww, Wwf, Wwf, Mm, Mm, Mm, Gs^Fp, Hh, Hh, Gg^Fet, Gg, Gg
