--- a/data/test/scenarios/manual_tests/scenario-story.cfg
+++ b/data/test/scenarios/manual_tests/scenario-story.cfg
@@ -20,9 +20,11 @@
             story= _ "TILED"
         [/part]
     [/story]
-    map_data="Mm, Mm, Mm
+    map_data="
+Mm, Mm, Mm
 Mm, 1 Mm, Mm
-Mm, Mm, Mm"
+Mm, Mm, Mm
+"
     [side]
         side=1
         recruit=alpha,beta
