--- a/data/campaigns/Dead_Water/scenarios/02_Flight.cfg
+++ b/data/campaigns/Dead_Water/scenarios/02_Flight.cfg
@@ -106,7 +106,8 @@
 
         [terrain_mask]
             x,y=33, 3
-            mask="_f, _f, _f, _f, _f, _f, _f
+            mask="
+_f, _f, _f, _f, _f, _f, _f
 _f, _f, Ce, Ce, 4 Ke, Ce, _f
 _f, _f, _f, Ce, Ce, _f, _f
 _f, _f, _f, _f, Ce, _f, _f
