--- a/data/test/scenarios/behavioral_tests/recruit_facing.cfg
+++ b/data/test/scenarios/behavioral_tests/recruit_facing.cfg
@@ -139,7 +139,8 @@
 
 #define EMPTY_MAP
     victory_when_enemies_defeated=no
-    map_data="Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg
+    map_data="
+Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg
 Gg, Ch, Ch, Ch, Ch, Ch, Ch, Ch, Ch, Ch, Gg
 Gg, Ch, Ch, Ch, Ch, Ch, Ch, Ch, Ch, Ch, Gg
 Gg, Ch, Ch, Ch, Ch, Ch, Ch, Ch, Ch, Ch, Gg
@@ -147,7 +148,8 @@ Gg, Ch, Ch, Ch, Ch,1 Kh, Ch, Ch, Ch, Ch, Gg
 Gg, Ch, Ch, Ch, Ch, Ch, Ch, Ch, Ch, Ch, Gg
 Gg, Ch, Ch, Ch, Ch, Ch, Ch, Ch, Ch, Ch, Gg
 Gg, Ch, Ch, Ch, Ch,2 Ch, Ch, Ch, Ch, Ch, Gg
-Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg"
+Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg
+"
     [event]
         name=start
         [gold]
