--- a/data/test/scenarios/manual_tests/Wesbench_AI.cfg
+++ b/data/test/scenarios/manual_tests/Wesbench_AI.cfg
@@ -8,7 +8,8 @@
     id=wesbench_ai
     name= _ "Wesnoth Benchmark: AI"
     description= _ "A wesnoth benchmark, use --nogui --no-delay --multiplayer --scenario=wesbench_ai --exit-at-end."	# wmllint: no spellcheck
-    map_data="Xu, Xu, Xu, Xu, Xu, Xu, Uu, Uu, Uu, Uu, Uu, Uu, Uu, Xu, Xu, Xu, Mm, Ha, Aa^Fpa, Aa, Aa, Aa, Ha, Ha, Mm, Mm, Mm, Ha, Ha, Gg, Aa^Fpa, Aa^Fpa, Ha, Ha, Mm, Mm, Mm, Ha, Ha, Aa, Aa, Aa
+    map_data="
+Xu, Xu, Xu, Xu, Xu, Xu, Uu, Uu, Uu, Uu, Uu, Uu, Uu, Xu, Xu, Xu, Mm, Ha, Aa^Fpa, Aa, Aa, Aa, Ha, Ha, Mm, Mm, Mm, Ha, Ha, Gg, Aa^Fpa, Aa^Fpa, Ha, Ha, Mm, Mm, Mm, Ha, Ha, Aa, Aa, Aa
 Xu, Xu, Xu, Xu, Xu, Xu, Uu, Uu, Uu, Uu, Uu^Vu, Uu, Uu, Xu, Xu, Xu, Mm, Ha, Aa^Fpa, Aa, Aa, Aa, Ha, Ha^Vhha, Mm, Mm, Mm, Ha, Ha, Gg, Aa^Fpa, Aa^Fpa, Ha, Ha, Mm, Mm, Mm, Ha, Ha, Aa, Aa, Aa
 Xu, Xu, Cud, Cud, Cud, Uu^Vu, Xu, Xu, Xu, Xu, Xu, Re, Mm, Xu, Mm, Mm, Aa, Gg, Gg, Gg, Ha, Ha, Mm, Mm, Mm, Mm, Mm, Mm, Mm, Ha, Ha, Ha, Mm, Ha, Mm, Mm, Xu, Mm, Mm, Ha, Ha, Ha
 Mm, Mm, Cud, 2 Kud, Cud, Uu, Xu, Mm, Mm, Mm, Mm, Re, Mm, Mm, Ha, Ha, Ha, Ha, Ha, Ha, Ha, Mm, Ha, Mm, Mm, Mm, Ha, Mm, Ha, Ha, Aa, Ha, Ha, Mm, Mm, Xu, Uu, Xu, Mm, Mm, Mm, Mm
