--- a/data/test/scenarios/manual_tests/Wesbench_Shroud_Walk.cfg
+++ b/data/test/scenarios/manual_tests/Wesbench_Shroud_Walk.cfg
@@ -8,7 +8,8 @@
     id=wesbench_shroud_walk
     name= _ "Wesnoth Benchmark: Walking through Shroud"
     description= _ "A wesnoth benchmark, use --no-delay --multiplayer --scenario=wesbench_shroud_walk --exit-at-end."	# wmllint: no spellcheck
-    map_data="Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Ch, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg
+    map_data="
+Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Ch, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg
 Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, 1 Kh, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg
 Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg
 Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg
