--- a/data/test/scenarios/manual_tests/scenario-test.cfg
+++ b/data/test/scenarios/manual_tests/scenario-test.cfg
@@ -14,7 +14,8 @@
 #endif
 [test]
     name=_"Test scenario"
-    map_data="Mm, Mm, Mm, Mm, Mm^Xm, Mm^Xm, Mm^Xm, Gg, Ww, Gg, Dd, Gg, Aa, Gg, Aa, Gg, Hh, Gg, Mm, Gg, Uu, Gg, Wo, Wo, Ch, Wo, Wo, Wo, Gg, Wo, Wo, Wo, Md, Wo, Wo, Wo, Rd, Wo, Wo
+    map_data="
+Mm, Mm, Mm, Mm, Mm^Xm, Mm^Xm, Mm^Xm, Gg, Ww, Gg, Dd, Gg, Aa, Gg, Aa, Gg, Hh, Gg, Mm, Gg, Uu, Gg, Wo, Wo, Ch, Wo, Wo, Wo, Gg, Wo, Wo, Wo, Md, Wo, Wo, Wo, Rd, Wo, Wo
 Mm, Mm, Mm, Mm, Mm^Xm, Mm^Xm, Mm^Xm, Gg^Vl, Ww^Vm, Gg, Dd^Vda, Gg, Aa^Vea, Aa^Vla, Aa^Vha, Gg, Hh^Vhh, Gg, Mm^Vhh, Gg, Uu^Vu, Gg, Wo, Wo, Ch, Wo, Wo, Wo, Gg^Fet, Wo, Wo, Wo, Md, Wo, Wo, Wo, Rd^Vov, 3 Wo, Wo
 Mm, Mm, Mm, Mm, Mm, Mm^Xm, Gg, Gg, Gg, Uu^Vud, Gg, Dd^Vdt, Gg, Gg^Ve, Gg, Gg^Vh, Gg^Vo, Ha^Vhha, Gg, Gs^Vht, Wo, Wo, Cud, Ch, Wo, Wo, Ds, Gg, Wo, Wo^Fet, Hd^Fet, Md^Fet, Wo^Fet, Wo, Re^Kov, Rd^Cov, Wo, Wo, Wo
 Mm, Mm, Gg, Gg, Gg, Gg, Gg, Ch, Ch, Ch, Ch, Gg, Gg, Gg, Gg, Gg, Gg^Vo, Gg^Vo, Gg^Em, Ss^Vhs, Gg, Cud, Wo, Wo, Dd, Ds, Wo, Wo, Ha, Hd, Wo, Wo, Ql^Fet, Re^Fet, Wo, Wo, Uu^Fp, Uu, Uu
@@ -34,7 +35,8 @@ Xu, Xu, Tb^Tf, Xu, Xu, Xu, Xu, Xu, Uu, Gg, Uh, Gg, Gg, Gg^Es, Gg, Gg, Gg, Gg, Gg
 Xu, Xu, Qxu, Qxu, Cud, Xu, Uu, Uu^Ii, Uu^Vu, Gg, Xu, Gg, Gg, Gg, Gg^Ve, Gg, Ch, Gg, Gg, Chr, Chr, Gg, Chw, Ww, Gg, Chs, Chs, Gg, Cud, Gg, Gg, Gg, Wo, Gs, Wo, Rd, Wo, Uh, Uh
 Xu, Xu, Xu, Qxu, Ql, Cud, Uh, Uu^Vu, Tb^Tf, Xu, Ql, Gg^Ve, Xu, Gg, Gg, Gg, Kh, Ch, Gg, Khr, Gg, Gg, Khw, Chw, Gg, Khs, Gg, Gg, Kud, Cud, Ww^Bw/, Ww^Bw/, Wo, Gs, Wo, Re, Wo, Uu, Uu
 Xu, Xu, Qxu, Qxu, Ql, Ql, Ql, Xu, Xu, Xu, Xu, Xu, Xu, Xu, Xu, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Wo, Gg, Wo, Re, Wo, Uu, Uu
-Xu, Xu, Qxu, Qxu, Ql, Ql, Ql, Xu, Xu, Xu, Xu, Xu, Xu, Xu, Xu, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Wo, Gg, Wo, Re, Wo, Uu, Uu"
+Xu, Xu, Qxu, Qxu, Ql, Ql, Ql, Xu, Xu, Xu, Xu, Xu, Xu, Xu, Xu, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Gg, Wo, Gg, Wo, Re, Wo, Uu, Uu
+"
     turns=unlimited
     id=test
 
