add a bunch of attacks tests
Cherry-picked from Pentarctagon's dev branch

Conflicts:
data/test/_main.cfg
data/test/scenarios/wml_tests/UnitsWML/AbilitiesWML/regenerate/regenerate_affect_allies.cfg
wml_test_schedule

--- a/data/test/_main.cfg
+++ b/data/test/_main.cfg
@@ -163,6 +163,9 @@
 #ifhave test/scenarios/wml_tests/UnitsWML/AbilitiesWML
 	{test/scenarios/wml_tests/UnitsWML/AbilitiesWML}
 #endif
+#ifhave test/scenarios/wml_tests/UnitsWML/AbilitiesWML/attacks
+	{test/scenarios/wml_tests/UnitsWML/AbilitiesWML/attacks}
+#endif
 #ifhave test/scenarios/wml_tests/UnitsWML/AbilitiesWML/heals
 	{test/scenarios/wml_tests/UnitsWML/AbilitiesWML/heals}
 #endif
