--- a/data/test/macros/wml_unit_test_macros.cfg
+++ b/data/test/macros/wml_unit_test_macros.cfg
@@ -56,54 +56,6 @@
     [/if]
 #enddef
 
-#define GENERIC_UNIT_TEST NAME CONTENT
-#arg SIDE1_CONTROLLER
-human#endarg
-#arg SIDE2_CONTROLLER
-human#endarg
-#arg TURNS
--1#endarg
-#arg SIDE1_RECRUIT
-#endarg
-#arg SIDE1_GOLD
-100#endarg
-#arg SIDE1_LEADER
-Elvish Archer#endarg
-
-    [test]
-        name = _ "Unit Test " + {NAME}
-        map_file=test/maps/generic_unit_test.map
-        turns = {TURNS}
-        id = {NAME}
-        is_unit_test = yes
-
-        {DAWN}
-
-        [side]
-            side=1
-            controller={SIDE1_CONTROLLER}
-            recruit={SIDE1_RECRUIT}
-            gold={SIDE1_GOLD}
-            [leader]
-                name = _ "Alice"
-                type = {SIDE1_LEADER}
-                id=alice
-            [/leader]
-        [/side]
-        [side]
-            side=2
-            controller={SIDE2_CONTROLLER}
-            [leader]
-                name = _ "Bob"
-                type = Orcish Grunt
-                id=bob
-            [/leader]
-        [/side]
-
-        {CONTENT}
-    [/test]
-#enddef
-
 #define FAIL
     {RETURN ([false][/false])}
 #enddef
@@ -113,13 +65,91 @@ Elvish Archer#endarg
 #enddef
 
 #define FAIL_IF_NOT FLAG NOT_EQUALS
-[if]
-    [variable]
-        name={FLAG}
-        not_equals={NOT_EQUALS}
-    [/variable]
-    [then]
-        {FAIL}
-    [/then]
-[/if]
+    [if]
+        [variable]
+            name={FLAG}
+            not_equals={NOT_EQUALS}
+        [/variable]
+        [then]
+            {FAIL}
+        [/then]
+    [/if]
+#enddef
+
+# have one adjacent unit attack another adjacent unit
+# each unit is given 1000 hp and their attack is made to 1x100, with a 100% chance of hitting
+#define ATTACK_AND_VALIDATE DAMAGE1
+
+#arg ID1
+alice#endarg
+
+#arg ID2
+bob#endarg
+
+#arg DAMAGE2
+{DAMAGE1}#endarg
+
+    [modify_unit]
+        [filter]
+            id={ID1},{ID2}
+        [/filter]
+        [effect]
+            apply_to=attack
+            [set_specials]
+                mode=append
+                [attacks]
+                    value=1
+                [/attacks]
+                [damage]
+                    value=100
+                [/damage]
+                [chance_to_hit]
+                    value=100
+                [/chance_to_hit]
+            [/set_specials]
+        [/effect]
+        hitpoints = 1000
+        max_hitpoints = 1000
+    [/modify_unit]
+
+    [test_do_attack_by_id]
+        attacker={ID1}
+        defender={ID2}
+    [/test_do_attack_by_id]
+
+    [store_unit]
+        [filter]
+            id={ID1}
+        [/filter]
+        variable={ID1}
+    [/store_unit]
+    [store_unit]
+        [filter]
+            id={ID2}
+        [/filter]
+        variable={ID2}
+    [/store_unit]
+
+    {ASSERT {VARIABLE_CONDITIONAL {ID1}.hitpoints numerical_equals "$(${ID1}.max_hitpoints-{DAMAGE1})"}}
+    {ASSERT {VARIABLE_CONDITIONAL {ID2}.hitpoints numerical_equals "$(${ID2}.max_hitpoints-{DAMAGE2})"}}
+
+    {CLEAR_VARIABLE {ID1}}
+    {CLEAR_VARIABLE {ID2}}
+#enddef
+
+# Takes a unit id, and checks that its hitpoints and experience are the expected values.
+# Clobbers the variable "temp".
+#define ASSERT_UNIT_HP_XP ID EXPECTED_HP EXPECTED_XP
+    [store_unit]
+        [filter]
+            id={ID}
+        [/filter]
+        variable=temp
+    [/store_unit]
+
+    {ASSERT ({VARIABLE_CONDITIONAL temp.length numerical_equals 1})}
+    {ASSERT ({VARIABLE_CONDITIONAL temp.hitpoints numerical_equals {EXPECTED_HP}})}
+    {ASSERT ({VARIABLE_CONDITIONAL temp.experience numerical_equals {EXPECTED_XP}})}
+
+    {CLEAR_VARIABLE temp}
 #enddef
