Fixup the attack tests because [event]name="pre attack" was added in 1.17.7

--- a/data/test/macros/wml_unit_test_macros.cfg
+++ b/data/test/macros/wml_unit_test_macros.cfg
@@ -194,6 +194,7 @@ numerical_equals#endarg
             step=1
             end="$({WEAPONS}-1)"
             [do]
+                {VARIABLE {ID1}_{ID2}_strikes 0}
                 [test_do_attack_by_id]
                     attacker={ID1}
                     defender={ID2}
