--- a/data/test/scenarios/wml_tests/ScenarioWML/EventWML/events-test_filters.cfg
+++ b/data/test/scenarios/wml_tests/ScenarioWML/EventWML/events-test_filters.cfg
@@ -294,20 +294,7 @@
     [/event]
 )}
 
-#####
-# API(s) being tested: [event][filter_attack],[event][filter_second_attack]
-##
-# Actions:
-# Define events filtering based on weapon specials.
-# Give Bob a poison special iff the opponent has a specific drain special.
-# Give Alice a drain special iff the opponent has a specific poison special.
-# Have side 1's unit attack side 2's unit.
-# Have side 2's unit attack side 1's unit.
-##
-# Expected end state:
-# Both events that should trigger for Bob do trigger.
-#####
-{GENERIC_UNIT_TEST event_test_filter_attack_opponent_weapon_condition (
+#define SPECIAL_CONDITION FILTER
     [event]
         name=turn 1
         # Make sure the attacks hit
@@ -339,11 +326,11 @@
                 [abilities]
                     [drains]
                         id=ability_drain_blade
-                        [filter_student]
+                        [filter_opponent]
                             [filter_weapon]
-                                type=blade
+                                {FILTER}
                             [/filter_weapon]
-                        [/filter_student]
+                        [/filter_opponent]
                     [/drains]
                 [/abilities]
             [/effect]
@@ -360,6 +347,8 @@
             [/status]
         [/modify_unit]
         {VARIABLE triggers 0}
+        {VARIABLE triggers_on_attack 0}
+        {VARIABLE triggers_on_defense 0}
         [do_command]
             [move]
                 x=7,13
@@ -408,6 +397,23 @@
         {ASSERT ({VARIABLE_CONDITIONAL side_number equals 1})}
         {VARIABLE_OP triggers_on_defense add 1}
     [/event]
+#enddef
+
+#####
+# API(s) being tested: [event][filter_attack],[event][filter_second_attack]
+##
+# Actions:
+# Define events filtering based on weapon specials.
+# Give Bob a poison special iff the opponent has a specific drain special.
+# Give Alice a drain special iff she has a blade attack.
+# Have side 1's unit attack side 2's unit.
+# Have side 2's unit attack side 1's unit.
+##
+# Expected end state:
+# Both events that should trigger for Bob do trigger.
+#####
+{GENERIC_UNIT_TEST event_test_filter_attack_opponent_weapon_condition (
+    {SPECIAL_CONDITION (type=blade)}
     [event]
         name=turn 2
         {ASSERT ({VARIABLE_CONDITIONAL triggers_on_attack equals 1})}
@@ -415,6 +421,31 @@
         {SUCCEED}
     [/event]
 )}
+
+#####
+# API(s) being tested: [event][filter_attack],[event][filter_second_attack]
+##
+# Actions:
+# Define events filtering based on absence of weapon specials.
+# Give Bob a poison special iff the opponent has a specific drain special.
+# Give Alice a drain special iff the opponent has a specific poison special.
+# Have side 1's unit attack side 2's unit.
+# Have side 2's unit attack side 1's unit.
+##
+# Expected end state:
+# Both events that trigger because both special need of other for activate and cause infinite recursion, the specials remains then inactive in that case.
+#####
+{GENERIC_UNIT_TEST event_test_filter_attack_opponent_weapon_condition_no_triggered (
+    {SPECIAL_CONDITION (special_id_active=ability_poison_blade)}
+    [event]
+        name=turn 2
+        {ASSERT ({VARIABLE_CONDITIONAL triggers_on_attack equals 0})}
+        {ASSERT ({VARIABLE_CONDITIONAL triggers_on_defense equals 0})}
+        {SUCCEED}
+    [/event]
+)}
+
+#undef SPECIAL_CONDITION
 
 #####
 # API(s) being tested: [event][filter_attack],[event][filter_second_attack]
