Fix abilities' [filter_adjacent_location]count= filtering
The Wiki docs say that count= takes a number or numerical range, and
returns true if the number of matches in adjacent locations matches
that range. However, it actually returns false if any location in the
adjacent= set doesn't match, and that seems to have been the behavior
since count= was originally added in 1.13.2.

--- a/data/test/scenarios/wml_tests/FilterWML/filter_adjacent_location_count_zero_active.cfg
+++ b/data/test/scenarios/wml_tests/FilterWML/filter_adjacent_location_count_zero_active.cfg
@@ -9,15 +9,9 @@
 # Test whether the ability is active.
 ##
 # Expected end state:
-# Although specialX should be active, it isn't.
+# specialX is active
 #####
-{COMMON_KEEP_A_B_C_D_UNIT_TEST "filter_adjacent_location_count_zero_active_bug" (
-    # Although this ability is meant to be active when the count of adjacent units with specialY is
-    # zero, the C++ implementation in abilities.cpp returns false (in several places) unless each
-    # direction listed in adjacent= contains a unit with that ability.
-    #
-    # It would be good to fix it before 1.20, but would be a behavior change so can't be backported
-    # to 1.18. When fixing the bug, this test should be renamed without the "_bug" suffix.
+{COMMON_KEEP_A_B_C_D_UNIT_TEST "filter_adjacent_location_count_zero_active" (
     [event]
         name=start
 
@@ -51,13 +45,11 @@
         [/object]
 
         {ASSERT (
-            [not]
-                [have_unit]
-                    [has_attack]
-                        special_id_active=specialX
-                    [/has_attack]
-                [/have_unit]
-            [/not]
+            [have_unit]
+                [has_attack]
+                    special_id_active=specialX
+                [/has_attack]
+            [/have_unit]
         )}
 
         {SUCCEED}
