--- a/data/test/scenarios/wml_tests/UnitsWML/AbilitiesWML/opponent_weapon_has_no_special.cfg
+++ b/data/test/scenarios/wml_tests/UnitsWML/AbilitiesWML/opponent_weapon_has_no_special.cfg
@@ -89,3 +89,89 @@
         {SUCCEED}
     [/event]
 )}
+
+#####
+# API(s) being tested: [attacks][filter_opponent][filter_weapon][not]special_id_active=
+##
+# Actions:
+# Give bob an attacks ability which is active when the opponent don't has an ability with a specific id.
+# remove all attack to alice.
+# Have bob and alice fight.
+##
+# Expected end state:
+# bob's ability does activate, leaving him with 3 strikes.
+#####
+{GENERIC_UNIT_TEST "opponent_weapon_has_no_weapon" (
+    [event]
+        name=start
+
+        [object]
+            silent=yes
+            [effect]
+                apply_to=new_ability
+                [abilities]
+                    [attacks]
+                        value=3
+                        [filter_opponent]
+                            race=elf
+                            [filter_weapon]
+                                [not]
+                                    special_id_active=test_cth
+                                [/not]
+                            [/filter_weapon]
+                        [/filter_opponent]
+                    [/attacks]
+                    [damage]
+                        value=1
+                    [/damage]
+                    [chance_to_hit]
+                        value=100
+                    [/chance_to_hit]
+                [/abilities]
+            [/effect]
+            [filter]
+                id=bob
+            [/filter]
+        [/object]
+
+        [object]
+            silent=yes
+            [effect]
+                apply_to=remove_attacks
+            [/effect]
+            [filter]
+                id=alice
+            [/filter]
+        [/object]
+
+        [do_command]
+            [move]
+                x=7,12
+                y=3,3
+            [/move]
+        [/do_command]
+
+        [do_command]
+            [attack]
+                weapon=0
+                [source]
+                    x,y=13,3
+                [/source]
+                [destination]
+                    x,y=12,3
+                [/destination]
+            [/attack]
+        [/do_command]
+
+        [store_unit]
+            [filter]
+                id=alice
+            [/filter]
+            variable=elf
+        [/store_unit]
+
+        {ASSERT ({VARIABLE_CONDITIONAL elf.hitpoints equals 26})}
+
+        {SUCCEED}
+    [/event]
+)}
