--- a/data/test/scenarios/wml_tests/ScenarioWML/EventWML/events-test_filters.cfg
+++ b/data/test/scenarios/wml_tests/ScenarioWML/EventWML/events-test_filters.cfg
@@ -405,7 +405,7 @@
 # Actions:
 # Define events filtering based on weapon specials.
 # Give Bob a poison special iff the opponent has a specific drain special.
-# Give Alice a drain special iff she has a blade attack.
+# Give Alice a drain special  iff the opponent has a specific poison special or blade attack.
 # Have side 1's unit attack side 2's unit.
 # Have side 2's unit attack side 1's unit.
 ##
@@ -446,6 +446,136 @@
 )}
 
 #undef SPECIAL_CONDITION
+
+#####
+# API(s) being tested: [event][filter_attack],[event][filter_second_attack]
+##
+# Actions:
+# Define specials filtering based on weapon specials.
+# Give Bob a poison special iff own a same special active or a blade or pierce attack.
+# Give Alice a drain special iff own a same special active or a blade or pierce attack.
+# Have side 1's unit attack side 2's unit.
+# Have side 2's unit attack side 1's unit.
+##
+# Expected end state:
+# Both events that should trigger for Bob do trigger because special don't check itself.
+#####
+{GENERIC_UNIT_TEST event_test_filter_attack_student_weapon_condition (
+    [event]
+        name=turn 1
+        # Make sure the attacks hit
+        {FORCE_CHANCE_TO_HIT (id=bob) (id=alice) 100 ()}
+        {FORCE_CHANCE_TO_HIT (id=alice) (id=bob) 100 ()}
+        [object]
+            silent=yes
+            [effect]
+                apply_to=new_ability
+                [abilities]
+                    [poison]
+                        id=ability_poison_blade
+                        [filter_student]
+                            [filter_weapon]
+                                special_id_active=ability_poison_blade
+                                [or]
+                                    type=blade,pierce
+                                [/or]
+                            [/filter_weapon]
+                        [/filter_student]
+                    [/poison]
+                [/abilities]
+            [/effect]
+            [filter]
+                id=bob
+            [/filter]
+        [/object]
+        [object]
+            silent=yes
+            [effect]
+                apply_to=new_ability
+                [abilities]
+                    [drains]
+                        id=ability_drain_blade
+                        [filter_student]
+                            [filter_weapon]
+                                special_id_active=ability_drain_blade
+                                [or]
+                                    type=blade,pierce
+                                [/or]
+                            [/filter_weapon]
+                        [/filter_student]
+                    [/drains]
+                [/abilities]
+            [/effect]
+            [filter]
+                id=alice
+            [/filter]
+        [/object]
+        [modify_unit]
+            [filter]
+            [/filter]
+            # Make sure they don't die during the attacks
+            [status]
+                invulnerable=yes
+            [/status]
+        [/modify_unit]
+        {VARIABLE triggers 0}
+        {VARIABLE triggers_on_attack 0}
+        {VARIABLE triggers_on_defense 0}
+        [do_command]
+            [move]
+                x=7,13
+                y=3,4
+            [/move]
+            [attack]
+                [source]
+                    x,y=13,4
+                [/source]
+                [destination]
+                    x,y=13,3
+                [/destination]
+            [/attack]
+        [/do_command]
+        [end_turn][/end_turn]
+    [/event]
+    [event]
+        name=side 2 turn
+        [do_command]
+            [attack]
+                [source]
+                    x,y=13,3
+                [/source]
+                [destination]
+                    x,y=13,4
+                [/destination]
+            [/attack]
+        [/do_command]
+        [end_turn][/end_turn]
+    [/event]
+    [event]
+        name=attack
+        first_time_only=no
+        [filter_attack]
+            special_id_active=ability_poison_blade
+        [/filter_attack]
+        {ASSERT ({VARIABLE_CONDITIONAL side_number equals 2})}
+        {VARIABLE_OP triggers_on_attack add 1}
+    [/event]
+    [event]
+        name=attack
+        first_time_only=no
+        [filter_second_attack]
+            special_id_active=ability_poison_blade
+        [/filter_second_attack]
+        {ASSERT ({VARIABLE_CONDITIONAL side_number equals 1})}
+        {VARIABLE_OP triggers_on_defense add 1}
+    [/event]
+    [event]
+        name=turn 2
+        {ASSERT ({VARIABLE_CONDITIONAL triggers_on_attack equals 1})}
+        {ASSERT ({VARIABLE_CONDITIONAL triggers_on_defense equals 1})}
+        {SUCCEED}
+    [/event]
+)}
 
 #####
 # API(s) being tested: [event][filter_attack],[event][filter_second_attack]
